Start code organization lecture

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -42,6 +42,7 @@ website:
         contents: 
         - slides/general-principles/code-basic.qmd
         - slides/general-principles/code-modular.qmd
+        - slides/general-principles/code-organization.qmd
 
 execute:
   freeze: auto  # re-render only when source changes
