--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -43,6 +43,7 @@ website:
         - slides/general-principles/code-basic.qmd
         - slides/general-principles/code-modular.qmd
         - slides/general-principles/code-organization.qmd
+        - slides/general-principles/code-orchestration.qmd
 
 execute:
   freeze: auto  # re-render only when source changes
