--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -44,6 +44,9 @@ website:
         - slides/general-principles/code-modular.qmd
         - slides/general-principles/code-organization.qmd
         - slides/general-principles/code-orchestration.qmd
+      - section: "Evaluating Methods"
+        contents: 
+        - slides/methods/evaluating-tests.qmd
 
 execute:
   freeze: auto  # re-render only when source changes
