--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Simulation results
+example-codes/**/*.csv
+example-codes/**/*.svg
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[codz]
