Add empty slide file

--- a/src/_quarto.yml
+++ b/src/_quarto.yml
@@ -49,6 +49,7 @@ website:
         - slides/methods/evaluating-tests.qmd
         - slides/methods/evaluating-cis.qmd
         - slides/methods/evaluating-causal-estimators.qmd
+        - slides/methods/evaluating-ml-algorithms.qmd
 
 execute:
   freeze: auto  # re-render only when source changes
